--- a/index.html
+++ b/index.html
@@ -340,9 +340,9 @@
                     </div>
                     <div style="width: 25%">
                         <div class="footer-inner_info">
-                            <div class="footer-inner_info_icon">
+                            <!-- <div class="footer-inner_info_icon">
                                 <img src="assets/icon/icon-hotline.svg" alt="">
-                            </div>
+                            </div> -->
                             <div class="footer-inner_info_content">
                                 <span class="footer-inner_info_title">Hotline</span>
                                 <p class="footer-inner-info_text">
@@ -353,19 +353,19 @@
                             </div>
                         </div>
                         <div class="footer-inner_info">
-                            <div class="footer-inner_info_icon">
+                            <!-- <div class="footer-inner_info_icon">
                                 <img src="assets/icon/icon-email.svg" alt="">
-                            </div>
+                            </div> -->
                             <div class="footer-inner_info_content">
                                 <span class="footer-inner_info_title">Email</span>
                                 <p class="footer-inner-info_text1">thayhuycodeitthoi@gmail.com</p>
                             </div>
                         </div>
                     </div>
-                    <div class="social">
+                    <!-- <div class="social">
                         <img class="social-item" id="social-item1" src="assets/icon/fb.png" alt="">
                         <img class="social-item" src="assets/icon/tiktok.png" alt="">
-                    </div>
+                    </div> -->
                 </div>
                 <!-- <div class="footer-inner-menu">
     
