--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <a href="index.html">Trang chủ</a>
                 </li>
                 <li class="menu__item">
-                    <a href="#!">Sản phẩm</a>
+                    <a href="product.html">Sản phẩm</a>
                     <ul class="sub-menu">
                         <li><a href="">Nam</a>
                             <ul class="sub-menu">
@@ -51,7 +51,7 @@
                 <li class="menu__item">
                     <a href="introduce.html">Giới thiệu</a>
                 </li>
-                <li class="menu__item"><a href="#!">Blog</a></li>
+                <li class="menu__item"><a href="blog.html">Blog</a></li>
                 <li class="menu__item"><a href="#!">Liên hệ</a></li>
             </ul>
         </div>
@@ -61,14 +61,6 @@
             <li><a href="#!" class="item"><i class="fa-solid fa-cart-shopping"></i></a></li>
         </div>
     </header>
-    <!-- <section style="" id="Slider"> tạm thời phế
-            <div class="slider-container">
-                <img src="assets/img/DESKTOP_EX-DRY_BANNER.png" alt="">
-                <img src="assets/img/HAPPY_FRIDAY.png" alt="">
-                <img src="assets/img/UT_JOGGER_DA_NANG.png" alt="">
-            </div>
-        </section> -->
-    <!-- Product test(import từ file cũ) -->
     <main class="homepage activ">
         <!-- Banner -->
         <section class="homepage-banner">
@@ -202,7 +194,7 @@
         <section class="homepage-products">
             <div class="container">
                 <div class="homepage-products_tab">
-                    <h2 class="text" style="text-transform: uppercase;">Sản phẩm chạy bộ</h2>
+                    <h2 class="homepage-products_tab-item-active" style="text-transform: uppercase; font-weight: 400;">Sản phẩm chạy bộ</h2>
                 </div>
                 <div class="products__list">
                     <div class="products-item">
@@ -270,7 +262,7 @@
         <section class="homepage-products">
             <div class="container">
                 <div class="homepage-products_tab">
-                    <h2 class="text" style="text-transform: uppercase;">Sản phẩm áo thun nam</h2>
+                    <h2 class="homepage-products_tab-item-active" style="text-transform: uppercase; font-weight: 400;">Sản phẩm áo thun nam</h2>
                 </div>
                 <div class="products__list">
                     <div class="products-item">
