--- a/cart.html
+++ b/cart.html
@@ -54,7 +54,7 @@
                     <a href="introduce.html">Giới thiệu</a>
                 </li>
                 <li class="menu__item"><a href="blog.html">Blog</a></li>
-                <li class="menu__item"><a href="#!">Liên hệ</a></li>
+                <!-- <li class="menu__item"><a href="#!">Liên hệ</a></li> -->
             </ul>
         </div>
         <div class="other">
