--- a/product.html
+++ b/product.html
@@ -27,7 +27,7 @@
                     <a href="index.html">Trang chủ</a>
                 </li>
                 <li class="menu__item">
-                    <a href="product.html">Sản phẩm</a>
+                    <a href="product.html"><span style="text-decoration: underline;">Sản phẩm</span></a>
                     <ul class="sub-menu">
                         <li><a href="">Nam</a>
                             <ul class="sub-menu">
