--- a/blog.html
+++ b/blog.html
@@ -51,7 +51,7 @@
                 <li class="menu__item">
                     <a href="introduce.html">Giới thiệu</a>
                 </li>
-                <li class="menu__item"><a href="blog.html">Blog</a></li>
+                <li class="menu__item"><a href="blog.html"><span style="text-decoration: underline;">Blog</span></a></li>
                 <!-- <li class="menu__item"><a href="#!">Liên hệ</a></li> -->
             </ul>
         </div>
