--- a/introduce.html
+++ b/introduce.html
@@ -49,7 +49,7 @@
 
                 </li>
                 <li class="menu__item">
-                    <a href="introduce.html">Giới thiệu</a>
+                    <a href="introduce.html"><span style="text-decoration: underline;">Giới thiệu</span></a>
                 </li>
                 <li class="menu__item"><a href="blog.html">Blog</a></li>
                 <!-- <li class="menu__item"><a href="#!">Liên hệ</a></li> -->
